# trajan-mcp

./: LICENSE  README.md  pyproject.toml
npx/: README.md  package.json
src/trajan_mcp/: __init__.py  client.py  server.py
