[project]
name = "trajan-mcp"
version = "0.1.0"
description = "MCP server for Trajan — connect AI agents to your developer workspace"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Kamino Corp" }]
keywords = ["mcp", "trajan", "ai-agents", "developer-tools", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.26.0",
]

[project.urls]
Homepage = "https://www.trajancloud.com"
Repository = "https://github.com/kaminocorp/trajan-mcp"
Issues = "https://github.com/kaminocorp/trajan-mcp/issues"
Documentation = "https://www.trajancloud.com/docs"

[project.scripts]
trajan-mcp = "trajan_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trajan_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100
